# cctemplate

./: .clang-format  .clangd  .gitignore  .setup.sh  CMakeLists.txt  Makefile  README.md  makefile
.cache/clangd/index/: main.cc.A1195025706027E7.idx
src/: main.cc
src/project/: project.hh  project.hh.in
